--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@
 
 body {
   background: url(./images/bg-mobile.svg) hsl(257, 40%, 49%);
+  background-repeat: no-repeat;
+  background-position: left top;
+  background-size: contain;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -30,7 +33,7 @@ header {
   margin-bottom: 3rem;
 }
 
-.tittle-img {
+.main-img {
   width: 100%;
   margin-bottom: 3rem;
 }
@@ -38,11 +41,8 @@ header {
 /* MAIN */
 
 .page-container {
-  max-width: 350px;
-  padding: 2.2rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  max-width: 430px;
+  margin: 10%;
   color: #fff;
 }
 
@@ -62,38 +62,57 @@ header {
   margin-bottom: 2rem;
 }
 
+.register {
+  width: 100%;
+  text-align: center;
+}
+
 .main__btn {
-  width: 70%;
-  padding: 0.5rem 2rem;
-  border-radius: 1.2rem;
+  width: 12.5rem;
+  padding: 0.8rem 2rem;
+  border-radius: 2rem;
   border: none;
-  box-shadow: 0 0.2rem 0.3rem hsl(257, 40%, 49%);
+  box-shadow: 0 0.3rem 0.5rem hsl(257, 40%, 30%);
   margin-bottom: 3rem;
+  color: hsl(257, 40%, 49%);
+  cursor: pointer;
+}
+
+.main__btn:hover {
+  color: #fff;
+  background: hsl(300, 69%, 71%);
 }
 
 .social {
   text-align: center;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 50%;
+  justify-content: center;
+  width: 100%;
 }
 
 .icon {
-  margin: 0.4rem;
-  padding: 0.3rem;
   border: 1px solid #fff;
-  background: transparent;
-  width: 100%;
   border-radius: 50%;
-  font-size: 1rem;
-  color: #fff;
+  margin: 0.5rem;
+  width: 2.5rem;
+  padding: 0.5rem;
   cursor: pointer;
 }
 
 .icon:hover {
   border: 1px solid hsl(300, 69%, 71%);
   color: hsl(300, 69%, 71%);
+}
+
+.fab {
+  padding: 1, 25rem;
+  font-size: 1.87rem;
+  width: 1.87rem;
+  text-align: center;
+  text-decoration: none;
+  margin: 0.31rem 0.12rem;
+  border-radius: 50%;
 }
 
 /* FOOTER */
@@ -106,6 +125,97 @@ header {
   color: hsl(228, 45%, 44%);
 }
 
+/* Tablet */
+
+@media screen and (min-width: 500px) {
+  .page-container {
+    max-width: 900px;
+  }
+
+  .tittle-logo {
+    width: 40%;
+  }
+
+  .main-img {
+    display: block;
+    margin: auto;
+    width: 70%;
+  }
+
+  .main__tittle {
+    font-size: 1.95rem;
+  }
+
+  .main__context {
+    font-size: 1.31rem;
+    margin-bottom: 4rem;
+  }
+
+  .main__btn {
+    font-size: 1.1rem;
+    padding: 1.1rem 2.3rem;
+  }
+
+  .icon {
+    width: 3.6rem;
+    font-size: 1.8rem;
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 900px) {
+  body {
+    background: url(./images/bg-desktop.svg) hsl(257, 40%, 49%);
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: 110%;
+  }
+
+  .page-container {
+    max-width: 1280px;
+    margin: 5%;
+  }
+
+  header {
+    width: 100%;
+  }
+
+  .tittle-logo {
+    width: 18%;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .grid-container {
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1.3fr 1fr;
+    grid-template-rows: 100vh;
+  }
+
+  .main-img {
+    align-self: center;
+    width: 90%;
+  }
+
+  .main__btn {
+    margin-bottom: 2rem;
+  }
+
+  .social {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .icon {
+    margin: 0.7rem;
+  }
+}
 /* 
 
 ## Layout
