--- a/style.css
+++ b/style.css
@@ -173,9 +173,11 @@ header {
   }
 
   .page-container {
-    max-width: 1280px;
+    max-width: 1440px;
     height: 90vh;
-    margin: 1rem;
+    margin: auto;
+    margin-top: 4rem;
+    padding: 0 3rem;
     position: relative;
   }
 
@@ -215,10 +217,13 @@ header {
   }
 
   .social {
-    width: 20%;
+    width: 30%;
     position: absolute;
-    right: -0.1rem;
-    bottom: -0.1rem;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
   }
 
   .icon {
