--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header {
     height: 90vh;
     margin: auto;
     margin-top: 4rem;
-    padding: 0 3rem;
+    padding: 0 6rem;
     position: relative;
   }
 
@@ -219,7 +219,7 @@ header {
   .social {
     width: 30%;
     position: absolute;
-    right: 0;
+    right: 5%;
     bottom: 0;
     display: flex;
     flex-direction: row;
