testing something for the correct use of icons

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ header {
   color: hsl(300, 69%, 71%);
 }
 
-.fab {
+.fa-brands {
   padding: 1, 25rem;
   font-size: 1.87rem;
   width: 1.87rem;
